--- a/src/styles/_block/_header.scss
+++ b/src/styles/_block/_header.scss
@@ -4,7 +4,7 @@
    ========================================================================== */
 
 .header {
-  $this : &;
+  $this: &;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -23,7 +23,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .a{fill:#fff;}
+    .a {
+      fill: #fff;
+    }
     svg {
       width: 800px;
       height: auto;
@@ -43,17 +45,16 @@
     justify-content: center;
     flex-direction: column;
     transform: translateX(100vw);
-    color: #FFF;
+    color: #fff;
     div {
       font-family: 'Monoton', cursive;
       font-size: 50px;
       letter-spacing: 0;
     }
     small {
-      font-family: $font-en;
       font-size: 12px;
       display: block;
-      margin-top: .618em;
+      margin-top: 0.618em;
     }
   }
 }
