--- a/src/styles/_block/_roulette.scss
+++ b/src/styles/_block/_roulette.scss
@@ -11,26 +11,25 @@
   // Wrapper
   &__wrapper {
     position: relative;
-    padding: 24px;
-    background-color: #FFF;
+    padding: 3px;
+    background-color: #fff;
     width: 83.82vw;
     max-width: 1280px;
     height: 38.2vh;
     max-height: 480px;
-    border-radius: 16px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 13px solid $color-red;
   }
 
   // Heading
   &__heading {
-    background-color: #FFF;
+    background-color: #fff;
     display: inline-block;
     color: $color-red;
     padding: 0 1.618em;
-    font-family: $font-b;
     font-size: 14px;
     position: absolute;
     transform: translateY(-50%);
@@ -49,9 +48,7 @@
   &__theme {
     font-size: 40px;
     line-height: 1.3;
-    font-family: $font-b;
     border: 1px solid $color-red;
-    border-radius: 14px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -61,7 +58,7 @@
     width: 100%;
     padding: 24px;
     .-small {
-      font-size: .618em;
+      font-size: 0.618em;
       line-height: 1.3;
     }
     @at-root .-theme01 & {
@@ -77,7 +74,7 @@
 
   // Placeholder
   &__placeholder {
-    color: #CCC;
+    color: #ccc;
     display: none;
     &.-active {
       display: block;
@@ -104,9 +101,9 @@
     max-width: inherit;
     height: inherit;
     max-height: inherit;
-    transform: scale(0.9)  translateY(24px);
+    transform: scale(0.9) translateY(24px);
     filter: blur(24px);
     border-radius: inherit;
-    background-color: rgba(0,0,0,0.382);
+    background-color: rgba(0, 0, 0, 0.382);
   }
 }
