--- a/src/styles/_block/_trigger.scss
+++ b/src/styles/_block/_trigger.scss
@@ -4,31 +4,25 @@
    ========================================================================== */
 
 #trigger {
-  content: 'START';
+  content: '開始';
   display: block;
-  background-color: #FFF;
-  color: $color-red;
-  text-shadow: 0px -1px rgba(#FFF, .618);
-  border-bottom: 5px solid darken($color-red, 15);
+  color: #fff;
+  background-color: $color-red;
   border-radius: 5em;
   width: 16.18%;
   min-width: 400px;
   padding: 1.1618em;
   line-height: 1;
-  font-family: $font-en;
-  font-weight: 500;
   font-size: 19px;
   position: fixed;
   bottom: 10vh;
   z-index: 2;
+  transition: background-color 0.21s ease 0s;
+  font-family: a-otf-midashi-mi-ma31-pr6n, serif;
+  font-style: normal;
+  font-weight: 600;
+  &:hover,
   &.-stop {
     background-color: darken($color-red, 15);
-    color: #FFF;
-    text-shadow: 0px -1px rgba(#1a1a1a, .618);
-    border-bottom: 5px solid darken($color-red, 30);
-    text-shadow: 0px -1px rgba(#FFF, .618);
-  }
-  &:active {
-    border-bottom: none !important;
   }
 }
