--- a/src/styles/_modifier/_animation.scss
+++ b/src/styles/_modifier/_animation.scss
@@ -7,23 +7,30 @@
 −−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−− */
 // ローディング
 @keyframes loading {
-    0% { transform: rotateZ(-360deg); }
-  100% { transform: rotateZ(0deg); }
+  0% {
+    transform: rotateZ(-360deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
 }
 
 // ふわふわ
 @keyframes floating {
-    0% { transform: translateY(1.5%); }
-  100% { transform: translateY(0%); }
+  0% {
+    transform: translateY(1.5%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
-
 
 /* Inview
 −−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−−− */
 // fade-in
 @mixin inview__fade-in() {
   will-change: opacity;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: opacity;
   transition-timing-function: $easeInOutSine;
   opacity: 0;
@@ -35,7 +42,7 @@
 // fade-in & up
 @mixin inview__fade-in-up() {
   will-change: opacity, transform;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: opacity, transform;
   transition-timing-function: $easeInOutSine;
   opacity: 0;
@@ -49,7 +56,7 @@
 // fade-in & scale
 @mixin inview__fade-in-scale() {
   will-change: opacity, transform;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: opacity, transform;
   transition-timing-function: $easeInOutSine;
   opacity: 0;
@@ -63,7 +70,7 @@
 // fade-in & blur
 @mixin inview__fade-in-blur() {
   will-change: opacity, filter;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: opacity, filter;
   transition-timing-function: $easeInOutSine;
   opacity: 0;
@@ -77,7 +84,7 @@
 // overflow-up
 @mixin inview__overflow-up() {
   will-change: opacity, transform;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: opacity, transform;
   transition-timing-function: $easeInOutSine;
   opacity: 0;
@@ -92,7 +99,7 @@
 // scale-x
 @mixin inview__scale-x() {
   will-change: transform;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: transform;
   transition-timing-function: $easeInOutSine;
   transform: scaleX(0);
@@ -104,7 +111,7 @@
 // color
 @mixin inview__color($color) {
   will-change: color;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transition-property: color;
   transition-timing-function: $easeInOutSine;
   color: 0;
