--- a/src/styles/_setting/_var.scss
+++ b/src/styles/_setting/_var.scss
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-
 // 変更箇所
 // ===========================================================
 
@@ -22,27 +21,15 @@ $sp-font-size: 14;
 $base-line-height: 2;
 
 // 文字間
-$base-letter-spacing: .15em;
+$base-letter-spacing: 0.15em;
 
 // カラー
-$color-red    : #e01300;
-$color-text   : #1a1a1a;
-$color-link   : $color-red;
-
-// フォント
-$font-r       : 'IwaUDRGoPro-Th';
-$font-m       : 'IwaUDRGoPro-Md';
-$font-b       : 'IwaUDRGoPro-Bd';
-$font-e       : 'IwaUDRGoPro-Eb';
-$font-en      : 'Quicksand';
+$color-red: #e01300;
+$color-text: #1a1a1a;
+$color-link: $color-red;
 
 // コンテンツ幅
 $contents-width: 1280px;
-
-// フォント
-$font-sans-serif: $font-r, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
-
-
 
 // ほぼ変更がいらない箇所
 // ===========================================================
@@ -52,30 +39,30 @@ $break-small: 767px;
 
 // Easing function
 // Original：http://easings.net/
-$easeInSine:     cubic-bezier(0.47,  0,     0.745, 0.715);
-$easeOutSine:    cubic-bezier(0.39,  0.575, 0.565, 1    );
-$easeInOutSine:  cubic-bezier(0.445, 0.05,  0.55,  0.95 );
-$easeInQuad:     cubic-bezier(0.55,  0.085, 0.68,  0.53 );
-$easeOutQuad:    cubic-bezier(0.25,  0.46,  0.45,  0.94 );
-$easeInOutQuad:  cubic-bezier(0.455, 0.03,  0.515, 0.955);
+$easeInSine: cubic-bezier(0.47, 0, 0.745, 0.715);
+$easeOutSine: cubic-bezier(0.39, 0.575, 0.565, 1);
+$easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+$easeInQuad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+$easeOutQuad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+$easeInOutQuad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
-$easeInCubic:    cubic-bezier(0.55,  0.055, 0.675, 0.19 );
-$easeOutCubic:   cubic-bezier(0.215, 0.61,  0.355, 1    );
-$easeInOutCubic: cubic-bezier(0.645, 0.045, 0.355, 1    );
-$easeInQuart:    cubic-bezier(0.895, 0.03,  0.685, 0.22 );
-$easeOutQuart:   cubic-bezier(0.165, 0.84,  0.44,  1    );
-$easeInOutQuart: cubic-bezier(0.77,  0,     0.175, 1    );
+$easeInCubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+$easeOutCubic: cubic-bezier(0.215, 0.61, 0.355, 1);
+$easeInOutCubic: cubic-bezier(0.645, 0.045, 0.355, 1);
+$easeInQuart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
+$easeOutQuart: cubic-bezier(0.165, 0.84, 0.44, 1);
+$easeInOutQuart: cubic-bezier(0.77, 0, 0.175, 1);
 
-$easeInQuint:    cubic-bezier(0.755, 0.05,  0.855, 0.06 );
-$easeOutQuint:   cubic-bezier(0.23,  1,     0.32,  1    );
-$easeInOutQuint: cubic-bezier(0.86,  0,     0.07,  1    );
-$easeInExpo:     cubic-bezier(0.95,  0.05,  0.795, 0.035);
-$easeOutExpo:    cubic-bezier(0.19,  1,     0.22,  1    );
-$easeInOutExpo:  cubic-bezier(1,     0,     0,     1    );
+$easeInQuint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+$easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
+$easeInOutQuint: cubic-bezier(0.86, 0, 0.07, 1);
+$easeInExpo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+$easeOutExpo: cubic-bezier(0.19, 1, 0.22, 1);
+$easeInOutExpo: cubic-bezier(1, 0, 0, 1);
 
-$easeInCirc:     cubic-bezier(0.6,   0.04,  0.98,  0.335);
-$easeOutCirc:    cubic-bezier(0.075, 0.82,  0.165, 1    );
-$easeInOutCirc:  cubic-bezier(0.785, 0.135, 0.15,  0.86 );
-$easeInBack:     cubic-bezier(0.6,  -0.28,  0.735, 0.045);
-$easeOutBack:    cubic-bezier(0.175, 0.885, 0.32,  1.275);
-$easeInOutBack:  cubic-bezier(0.68, -0.55,  0.265, 1.55 );
+$easeInCirc: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+$easeOutCirc: cubic-bezier(0.075, 0.82, 0.165, 1);
+$easeInOutCirc: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+$easeInBack: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+$easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+$easeInOutBack: cubic-bezier(0.68, -0.55, 0.265, 1.55);
