--- a/src/styles/_block/_main.scss
+++ b/src/styles/_block/_main.scss
@@ -1,11 +1,8 @@
 @charset "UTF-8";
 
-/* main
-   ========================================================================== */
-
 .main {
   position: relative;
-  z-index: 1;
+  z-index: z(main);
   display: flex;
   flex-direction: column;
   align-items: center;
