--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,5 @@
 @import '_block/_wrapper';
 @import '_block/_main';
 @import '_block/_roulette';
-@import '_block/_trigger';
-@import '_block/_header';
-@import '_block/_ataru';
+@import '_block/_opening';
 @import '_block/_ending';
